# DacovaOneclassDemo

./: README.md  infer_onnx.py  infer_openvino.py  postprocessing.py  requirements.txt
cpp/: CMakeLists.txt  main.cpp
onnx_cpp/: CMakeLists.txt  main.cpp
openvino_cpp/: Dockerfile  main.cpp
scripts/: infer.sh
weights/onnx/: model_20221222_9229_664304.json  model_20221222_9229_664304_result.json
weights/openvino/: model_20221222_9229_664304.json  model_20221222_9229_664304.mapping  model_20221222_9229_664304.xml  model_20221222_9229_664304_result.json
